--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "html": "html-minifier --remove-comments --collapse-whitespace --input-dir src --output-dir dist --file-ext html",
     "styles": "postcss src/styles/index.css --use postcss-import --use postcss-csso --no-map --output dist/styles/index.css",
     "build": "npm run html && npm run styles",
+    "validate": "node-w3c-validator -i ./src/*/*.html -f html -o ./reports/result.html -s",
     "serve": "serve"
   },
   "devDependencies": {
@@ -17,6 +18,7 @@
     "postcss-import": "^12.0.1"
   },
   "dependencies": {
+    "node-w3c-validator": "^2.0.1",
     "serve": "^13.0.2"
   }
 }
