--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
   "scripts": {
-    "start": "browser-sync start --server src --no-notify --no-ui --cwd src --files index.html,styles/**/*",
+    "start": "browser-sync start --server src/flexbox --no-notify --no-ui --cwd src/flexbox --files index.html,styles/*",
     "test": "editorconfig-checker",
-    "html": "html-minifier --remove-comments --collapse-whitespace --input-dir src --output-dir dist --file-ext html",
-    "styles": "postcss src/styles/index.css --use postcss-import --use postcss-csso --no-map --output dist/styles/index.css",
+    "html": "html-minifier --remove-comments --collapse-whitespace --input-dir src/flexbox --output-dir dist --file-ext html",
+    "styles": "postcss src/flexbox/styles/index.css --use postcss-import --use postcss-csso --no-map --output dist/styles/index.css",
     "build": "npm run html && npm run styles",
     "validate": "node-w3c-validator -i ./src/*/*.html -f html -o ./reports/result.html -s",
     "serve": "serve"
