--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,5 +17,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "mysimplesite01" #Must be unique in Heroku
-          heroku_email: "njhuckov@gmail.com"
+          heroku_app_name: "flexboxapp" #Must be unique in Heroku
+          heroku_email: "maxim.zaykov97@gmail.com"
